@@ -23,19 +23,13 @@ if { [is_remote target] || ![isnative] } then {
     continue
 }
 
-# Until "catch syscall" is implemented on other targets...
-if { ![istarget "hppa*-hp-hpux*"] && ![istarget "*-linux*"] } {
-    continue
-}
-
 # This shall be updated whenever 'catch syscall' is implemented
 # on some architecture.
-#if { ![istarget "i\[34567\]86-*-linux*"]
 if { ![istarget "x86_64-*-linux*"] && ![istarget "i\[34567\]86-*-linux*"]
      && ![istarget "powerpc-*-linux*"] && ![istarget "powerpc64-*-linux*"]
      && ![istarget "sparc-*-linux*"] && ![istarget "sparc64-*-linux*"]
      && ![istarget "mips*-linux*"] && ![istarget "arm*-linux*"]
-     && ![istarget "s390*-linux*"] } {
+     && ![istarget "s390*-linux*"] && ![istarget "hppa*-hp-hpux*"] } {
      continue
 }
 
